--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@types/leaflet": "^1.9.12",
     "leaflet": "^1.9.4",
+    "leaflet.tilelayer.pouchdbcached": "^1.0.0",
     "next": "14.2.11",
+    "pouchdb": "^9.0.0",
+    "pouchdb-find": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
