--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.12",
+    "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "leaflet.tilelayer.pouchdbcached": "^1.0.0",
     "next": "14.2.11",
+    "node-geocoder": "^4.4.0",
+    "openai": "^4.63.0",
     "pouchdb": "^9.0.0",
     "pouchdb-find": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-cluster": "^2.1.0"
+    "react-leaflet-cluster": "^2.1.0",
+    "wikijs": "^6.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
