--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.12",
+    "ai": "^3.3.44",
     "axios": "^1.7.7",
+    "cohere-ai": "^7.13.2",
     "leaflet": "^1.9.4",
     "leaflet.tilelayer.pouchdbcached": "^1.0.0",
     "next": "14.2.11",
