--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.19.0",
     "@types/leaflet": "^1.9.12",
     "ai": "^3.3.44",
     "axios": "^1.7.7",
